<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/default_avatar"
        android:layout_margin="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text_default"
        android:textSize="@dimen/text_default_size"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/playBtn"
        android:enabled="false"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_btn"
        android:onClick="onPlayBtnClick"/>

    <Button
        android:textAllCaps="false"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_btn"
        android:onClick="onEnterBtnClick"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="5dp"
        android:onClick="onHelpClicked"
        android:scaleType="fitXY"
        android:src="@drawable/ic_info_outline_black_24dp" />


</LinearLayout>